--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,7 +52,7 @@
           <ul class="gnav-list">
             <li class="gnav-item"><a href="#works">WORKS</a></li>
             <li class="gnav-item"><a href="#skill">SKILL</a></li>
-            <li class="gnav-item"><a href="#about">ABOUT</a></li>
+            <li class="gnav-item"><a href="#top">ABOUT</a></li>
             <li class="gnav-item"><a href="#contact">CONTACT</a></li>
           </ul>
         </nav>
@@ -62,110 +62,110 @@
 
     <main class="content">
 
-     <div id="top">
+      <div id="top">
 
-      <div class="rotateBox02">
-        <!-- 回転させたい要素 -->
-        <!-- 最低2、最大4つのブロックを指定 -->
-        <div class="case1">
-          <section class="kv-block outer-block">
-            <p>
-            <div class="mv" id="mv">
-              <div class="mv-container">
-                <p class="mv-title">SATOU HIDETOSHI‘s</p>
-                <p class="mv-subtitle">PORTFOLIO</p>
-                <p class="mv-text">
-                  <br class="sp-only">Web Engineer<br>
-                </p>
+        <div class="rotateBox02">
+          <!-- 回転させたい要素 -->
+          <!-- 最低2、最大4つのブロックを指定 -->
+          <div class="case1">
+            <section class="kv-block outer-block">
+              <p>
+              <div class="mv" id="mv">
+                <div class="mv-container">
+                  <p class="mv-title">SATOU HIDETOSHI‘s</p>
+                  <p class="mv-subtitle">PORTFOLIO</p>
+                  <p class="mv-text">
+                    <br class="sp-only">Web Engineer<br>
+                  </p>
                 </div>
 
-              <canvas id="canvas" class="fadeTarget"></canvas>
-              <div id="kv" class="fadeTarget"></div>
+                <canvas id="canvas" class="fadeTarget"></canvas>
+                <div id="kv" class="fadeTarget"></div>
 
 
 
+              </div>
+              </p>
+              <p class="turnBoxButton" id="case1"><i class="fas fa-arrow-alt-circle-right"></i></p>
+            </section>
+          </div><!-- 1つめのブロック -->
+
+
+
+
+          <div class="case2">
+            <p>
+            <div class="mv_sub" id="mv-sub">
+              <div class="background-container">
+                <img class="moon" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+                <div class="stars"></div>
+                <div class="twinkling"></div>
+                <div class="clouds"></div>
+              </div>
+
+              <p class="mv-title">PROFILE</p>
+              <p class="mv-text">　はじめまして。佐藤　栄寿と申します。IT業界は未経験です。<br>
+                　現在、ハローワークの職業訓練にてWEB制作のコースを受講中。言語はHTML,PHP,JaVaScriptを、他にはDBやWordpressについて主に学んでいます。<br>
+                　5月に基本情報技術者試験を受験し６月末の合格発表を待っている現状です。</p>
             </div>
             </p>
-            <p class="turnBoxButton" id="case1"><i class="fas fa-arrow-alt-circle-right"></i></p>
-          </section>
-        </div><!-- 1つめのブロック -->
-
-
-
-
-        <div class="case2">
-          <p>
-          <div class="mv_sub" id="mv-sub">
-            <div class="background-container">
-              <img class="moon" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
-              <div class="stars"></div>
-              <div class="twinkling"></div>
-              <div class="clouds"></div>
-            </div>
-
-            <p class="mv-title">PROFILE</p>
-            <p class="mv-text">　はじめまして。佐藤　栄寿と申します。IT業界は未経験です。<br>
-              　現在、ハローワークの職業訓練にてWEB制作のコースを受講中。言語はHTML,PHP,JaVaScriptを、他にはDBやWordpressについて主に学んでいます。<br>
-              　5月に基本情報技術者試験を受験し６月末の合格発表を待っている現状です。</p>
-          </div>
-          </p>
-          <p class="turnBoxButton" id="case2"><i class="fas fa-arrow-alt-circle-right"></i></p>
-        </div><!-- 2つめのブロック -->
+            <p class="turnBoxButton" id="case2"><i class="fas fa-arrow-alt-circle-right"></i></p>
+          </div><!-- 2つめのブロック -->
 
 
 
 
 
 
-        <div class="case3">
-          <section class="kv-block outer-block">
-            <p>
-            <div class="mv" id="mv">
-              <div class="mv-container">
-                <p class="mv-title">SATOU HIDETOSHI‘s</p>
-                <p class="mv-subtitle">PORTFOLIO</p>
-                <p class="mv-text">
-                  <br class="sp-only">Web Engineer<br>
-                </p>
+          <div class="case3">
+            <section class="kv-block outer-block">
+              <p>
+              <div class="mv" id="mv">
+                <div class="mv-container">
+                  <p class="mv-title">SATOU HIDETOSHI‘s</p>
+                  <p class="mv-subtitle">PORTFOLIO</p>
+                  <p class="mv-text">
+                    <br class="sp-only">Web Engineer<br>
+                  </p>
                 </div>
 
-              <canvas id="canvas" class="fadeTarget"></canvas>
-              <div id="kv" class="fadeTarget"></div>
+                <canvas id="canvas" class="fadeTarget"></canvas>
+                <div id="kv" class="fadeTarget"></div>
 
 
 
+              </div>
+              </p>
+              <p class="turnBoxButton" id="case3"><i class="fas fa-arrow-alt-circle-right"></i></p>
+            </section>
+          </div><!-- 3つめのブロック -->
+
+
+
+
+
+          <div class="case4">
+            <p>
+            <div class="mv_sub" id="mv-sub">
+              <div class="background-container">
+                <img class="moon" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+                <div class="stars"></div>
+                <div class="twinkling"></div>
+                <div class="clouds"></div>
+              </div>
+
+              <p class="mv-title">PROFILE</p>
+              <p class="mv-text">　はじめまして。佐藤　栄寿と申します。IT業界は未経験です。<br>
+                　現在、職業訓練でWEB制作のコースを受講中。言語はHTML,PHP,JaVaScript,SQLを、他にはWordpress等について主に学んでいます。<br>
+                　</p>
             </div>
             </p>
-            <p class="turnBoxButton" id="case3"><i class="fas fa-arrow-alt-circle-right"></i></p>
-          </section>
-        </div><!-- 3つめのブロック -->
+            <p class="turnBoxButton" id="case4"><i class="fas fa-arrow-alt-circle-right"></i></p>
+          </div><!-- 4つめのブロック -->
 
 
-
-
-
-        <div class="case4">
-          <p>
-          <div class="mv_sub" id="mv-sub">
-            <div class="background-container">
-              <img class="moon" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
-              <div class="stars"></div>
-              <div class="twinkling"></div>
-              <div class="clouds"></div>
-            </div>
-
-            <p class="mv-title">PROFILE</p>
-            <p class="mv-text">　はじめまして。佐藤　栄寿と申します。IT業界は未経験です。<br>
-              　現在、職業訓練でWEB制作のコースを受講中。言語はHTML,PHP,JaVaScript,SQLを、他にはWordpress等について主に学んでいます。<br>
-              　</p>
-          </div>
-          </p>
-          <p class="turnBoxButton" id="case4"><i class="fas fa-arrow-alt-circle-right"></i></p>
-        </div><!-- 4つめのブロック -->
-
-
+        </div>
       </div>
-    </div>
       <script>
         $(function () {
           //例2　横回転ver
@@ -187,66 +187,92 @@
 
 
 
-        <!-- /mv -->
+      <!-- /mv -->
 
-        <!-- works -->
-        <section class="works section" id="works">
-          <div class="container">
-            <h2 class="title">WORKS</h2>
-            <div class="works-list">
-              <a class="works-item" href="http://yamadamama.php.xdomain.jp/portfolio/">
+      <!-- works -->
+      <section class="works section" id="works">
+        <div class="container">
+          <h2 class="title">WORKS</h2>
+          <div class="works-list">
+
+
+            <div class="works-item">
+              <a href="http://yamadamama.php.xdomain.jp/portfolio/">
                 <div class="works-img"><img src="img/works-sample-thumb.jpg" alt="" /></div>
                 <p class="works-name">PORTFOLIO</p>
-                <p class="works-info">Design / jQuery</p>
               </a>
-              <a class="works-item" href="http://yamadamama.php.xdomain.jp/ichiba/">
+              <p class="works-info">Design / jQuery</p>
+              </a>
+              <a href="https://github.com/satouhidetoshi/code/tree/master/portfolio">source code</a>
+            </div>
+
+
+            <div class="works-item">
+              <a href="http://yamadamama.php.xdomain.jp/ichiba/">
                 <div class="works-img"><img src="img/tasakiichiba.jpg" alt="" /></div>
                 <p class="works-name">Wordpressを使ったホームページ</p>
-                <p class="works-info">Design / Coding(Responsive) / WordPress</p>
               </a>
-              <a class="works-item" href="http://yamadamama.php.xdomain.jp/nuts-shop3/">
+              <p class="works-info">Design / Coding(Responsive) / WordPress</p>
+              <a href="https://github.com/satouhidetoshi/code/tree/master/write_backup">source code</a>
+            </div>
+
+
+            <div class="works-item">
+              <a href="http://yamadamama.php.xdomain.jp/nuts-shop3/">
                 <div class="works-img"><img src="img/nuts.jpg" alt="" /></div>
                 <p class="works-name">phpを使ったECサイト</p>
-                <p class="works-info">php / DB</p>
               </a>
-              <a class="works-item" href="http://yamadamama.php.xdomain.jp/nuts-shop3/admin/">
+              <p class="works-info">php / SQL</p>
+              <a href="https://github.com/satouhidetoshi/code/tree/master/nuts-shop3/publish">source code</a>
+            </div>
+
+
+            <div class="works-item">
+              <a href="http://yamadamama.php.xdomain.jp/nuts-shop3/admin/">
                 <div class="works-img"><img src="img/nuts.jpg" alt="" /></div>
                 <p class="works-name">ECサイト 管理画面</p>
-                <p class="works-info">php / DB</p>
               </a>
-              <a class="works-item" href="http://yamadamama.php.xdomain.jp/web/index.php">
+              <p class="works-info">php / DB</p>
+              <a href="https://github.com/satouhidetoshi/code/tree/master/nuts-shop3/admin">source code</a>
+            </div>
+
+
+            <div class="works-item">
+              <a href="http://yamadamama.php.xdomain.jp/web/index.php">
                 <div class="works-img"><img src="img/walk.jpg" alt="" /></div>
                 <p class="works-name">HTMLによる静的ホームページ</p>
-                <p class="works-info">Design / HTML /PHP</p>
               </a>
+              <p class="works-info">Design / HTML /PHP</p>
+              <a href="https://github.com/satouhidetoshi/code/tree/master/web">source code</a>
             </div>
           </div>
-        </section>
-        <!-- /works -->
+        </div>
+      </section>
+      <!-- /works -->
 
-        <!-- skill -->
-        <section class="skill section" id="skill">
-          <div class="container">
-            <h2 class="title">SKILL</h2>
+      <!-- skill -->
+      <section class="skill section" id="skill">
+        <div class="container">
+          <h2 class="title">SKILL</h2>
+          <div class="skill-list">
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/code-1076536_640.jpg" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">HTML5/CSS3</h3>
+                <p class="skill-text">
+                  Webクリエイター能力認定試験 エキスパート 合格</p>
+              </div>
+            </div>
+
             <div class="skill-list">
               <div class="skill-item">
                 <p class="skill-img"><img src="img/code-1076536_640.jpg" alt=""></p>
                 <div class="skill-body">
-                  <h3 class="skill-name">HTML5/CSS3</h3>
+                  <h3 class="skill-name">PHP</h3>
                   <p class="skill-text">
-                    Webクリエイター能力認定試験 エキスパート 合格</p>
+                    DBと接続したサイト作り</p>
                 </div>
               </div>
-
-              <div class="skill-list">
-                <div class="skill-item">
-                  <p class="skill-img"><img src="img/code-1076536_640.jpg" alt=""></p>
-                  <div class="skill-body">
-                    <h3 class="skill-name">PHP</h3>
-                    <p class="skill-text">
-                      DBと接続したサイト作り</p>
-                  </div>
-                </div>
 
 
 
@@ -266,12 +292,12 @@
                     ｊQueryを使用した動きのあるサイト作り。</p>
                 </div>
               </div>
-              
-              
-        </section>
-        <!-- /skill -->
 
-        <!-- about 
+
+      </section>
+      <!-- /skill -->
+
+      <!-- about 
         <section class="about section" id="about">
           <div class="container">
             <h2 class="title">ABOUT</h2>
@@ -292,23 +318,23 @@
         </section>
        /about -->
 
-        <!-- contact -->
-        <section class="contact section" id="contact">
-          <div class="container">
-            <h2 class="title">CONTACT</h2>
-            <p class="lead">
-              Email:<br class="sp-only">syamada957@gmail.com<br>
-              Tel : 080-2807-2742<br>
-              address:秋田県秋田市将軍野南5-3-13-6
-            </p>
+      <!-- contact -->
+      <section class="contact section" id="contact">
+        <div class="container">
+          <h2 class="title">CONTACT</h2>
+          <p class="lead">
+            Email:<br class="sp-only">syamada957@gmail.com<br>
+            Tel : 080-2807-2742<br>
+            address:秋田県秋田市将軍野南5-3-13-6
+          </p>
 
 
-          </div>
-        </section>
-        <!-- /contact -->
-        <div class="page-top" id="js-page-top">
-          <span class="material-icons-outlined">expand_less</span>
         </div>
+      </section>
+      <!-- /contact -->
+      <div class="page-top" id="js-page-top">
+        <span class="material-icons-outlined">expand_less</span>
+      </div>
     </main>
 
     <!-- footer -->
